--- a/html-page.html
+++ b/html-page.html
@@ -16,18 +16,35 @@
         <p class="logo">workingfish</p>
         <ul class="nav-list">
             <li class="nav-item"><a href="./html-page.html">html</a></li> 
-            <li class="nav-item"><a href="">css</a></li>
+            <li class="nav-item"><a href="./css.html">css</a></li>
             <li class="nav-item"><a href="/scss.html">scss</a></li>
             <li class="nav-item"><a href="./git.html">git</a></li>
             <li class="nav-item"><a href="./github.html">github</a></li>
             <li class="nav-item"><a href="">figma</a></li>
-            <li class="nav-item"><a href="">js</a></li>
+            <li class="nav-item"><a href="./js.html">js</a></li>
             <li class="nav-item"><a href="./tasks.html">tasks</a></li>
         </ul>
     </nav>
     <h1><span class="h1">html</span> &mdash; язык гипертекстовой разметки</h1>
 </header>   
 <main class="main">
+    <section class="meta">
+        <pre>
+            <code>
+                &lt;!DOCTYPE html&gt;
+                &lt;html lang="en"&gt;
+                &lt;head&gt;
+                &lt;meta charset="UTF-8"&gt;
+                &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;
+                &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+                &lt;title>workingfish&lt;/title&gt;
+                &lt;link rel="stylesheet" href="reset.css"&gt;
+                &lt;link rel="stylesheet" href="style.css"&gt;
+                &lt;link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"&gt;
+                &lt;/head&gt;
+            </code>
+        </pre>
+    </section>
     <section class="intro">
         <p class="intro-text">html код мы пишем с использованием html тегов.</p>
         <p class="intro-text">html тег — это специальное зарезервированное слово в угловых скобках <>.</p>
