--- a/index.html
+++ b/index.html
@@ -4,42 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>workingfish</title>
+    <title>html</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+
 </head>
 <body>
-    <header class="header">
-        <nav class="nav">
-            <p class="logo">workingfish</p>
-            <ul class="nav-list">
-                <li class="nav-item"><a href="./html-page.html">html</a></li> 
-                <li class="nav-item"><a href="">css</a></li>
-                <li class="nav-item"><a href="/scss.html">scss</a></li>
-                <li class="nav-item"><a href="./git.html">git</a></li>
-                <li class="nav-item"><a href="./github.html">github</a></li>
-                <li class="nav-item"><a href="">figma</a></li>
-                <li class="nav-item"><a href="">js</a></li>
-                <li class="nav-item"><a href="./tasks.html">tasks</a></li>
-            </ul>
-        </nav>
-        <h1><span class="h1">html</span> &mdash; язык гипертекстовой разметки</h1>
-    </header>   
-    <main class="main">
-        <section class="intro">
-            <p class="intro-text">html код мы пишем с использованием html тегов.</p>
-            <p class="intro-text">html тег — это специальное зарезервированное слово в угловых скобках <>.</p>
-            <p class="intro-text">теги бывают парными и одиночными.</p>
-        </section>
-        <section class="codepen">
-            <p class="codepen" data-height="500" data-default-tab="html,result" data-slug-hash="eYMaNZY" data-user="frommenine" >
-                <span>See the Pen <a href="https://codepen.io/frommenine/pen/eYMaNZY">
-                Untitled</a> by frommenine (<a href="https://codepen.io/frommenine">@frommenine</a>)
-                on <a href="https://codepen.io">CodePen</a>.</span>
-              </p>
-              <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-        </section>
-    </main> 
+ <header class="header">
+    <nav class="nav">
+        <p class="logo">workingfish</p>
+        <ul class="nav-list">
+            <li class="nav-item"><a href="./html-page.html">html</a></li> 
+            <li class="nav-item"><a href="./css.html">css</a></li>
+            <li class="nav-item"><a href="/scss.html">scss</a></li>
+            <li class="nav-item"><a href="./git.html">git</a></li>
+            <li class="nav-item"><a href="./github.html">github</a></li>
+            <li class="nav-item"><a href="">figma</a></li>
+            <li class="nav-item"><a href="./js.html">js</a></li>
+            <li class="nav-item"><a href="./tasks.html">tasks</a></li>
+        </ul>
+    </nav>
+    <h1><span class="h1">html</span> &mdash; язык гипертекстовой разметки</h1>
+</header>   
+<main class="main">
+    <section class="meta">
+        <pre>
+            <code>
+                &lt;!DOCTYPE html&gt;
+                &lt;html lang="en"&gt;
+                &lt;head&gt;
+                &lt;meta charset="UTF-8"&gt;
+                &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;
+                &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+                &lt;title>workingfish&lt;/title&gt;
+                &lt;link rel="stylesheet" href="reset.css"&gt;
+                &lt;link rel="stylesheet" href="style.css"&gt;
+                &lt;link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"&gt;
+                &lt;/head&gt;
+            </code>
+        </pre>
+    </section>
+    <section class="intro">
+        <p class="intro-text">html код мы пишем с использованием html тегов.</p>
+        <p class="intro-text">html тег — это специальное зарезервированное слово в угловых скобках <>.</p>
+        <p class="intro-text">теги бывают парными и одиночными.</p>
+    </section>
+    <section class="codepen">
+        <p class="codepen" data-height="500" data-default-tab="html,result" data-slug-hash="eYMaNZY" data-user="frommenine" >
+            <span>See the Pen <a href="https://codepen.io/frommenine/pen/eYMaNZY">
+            Untitled</a> by frommenine (<a href="https://codepen.io/frommenine">@frommenine</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+    </section>
+</main>
+
 </body>
 </html>
