--- a/github.html
+++ b/github.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tasks</title>
+    <title>github</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
@@ -21,7 +21,7 @@
             <li class="nav-item"><a href="./git.html">git</a></li>
             <li class="nav-item"><a href="./github.html">github</a></li>
             <li class="nav-item"><a href="">figma</a></li>
-            <li class="nav-item"><a href="">js</a></li>
+            <li class="nav-item"><a href="./js.html">js</a></li>
             <li class="nav-item"><a href="./tasks.html">tasks</a></li>
         </ul>
     </nav>
