--- a/js.html
+++ b/js.html
@@ -118,6 +118,44 @@
                 const bigInt = 1234567890123456789012345678901234567890n;
             </code></pre> <br>
 
+            <!-- СТРОКА -->
+
+            <h3 class="subtitle">Строка (String)</h3>
+            <p class="info-text">Строка в JavaScript должна быть заключена в кавычки</p>
+            <p class="info-text">Обратные кавычки имеют расширенную функциональность. Они позволяют нам встраивать выражения в строку, заключая их в ${…}. Например:</p>
+            <pre class="rainbow"><code data-language="JavaScript">
+                let name = "John";
+                alert( `Привет, ${name}!` ); 
+            </code></pre> <br>
+
+            <!-- БУЛЕВЫЙ ТИП -->
+            <h3 class="subtitle">Булевый/логический (boolean) тип</h3>
+            <p class="info-text">Булевый тип (boolean) может принимать только два значения: true (истина) и false (ложь).</p>
+            <p class="info-text">Такой тип, как правило, используется для хранения значений да/нет: true значит «да, правильно», а false значит «нет, не правильно».</p>
+            <p class="info-text">Например:</p>
+            <pre class="rainbow"><code data-language="JavaScript">
+                let nameJohn = true; 
+                let nameEmma = false;
+            </code></pre> <br>
+
+            <p class="info-text">Булевые значения также могут быть результатом сравнений:</p>
+            <pre class="rainbow"><code data-language="JavaScript">
+                let isGreater = 4 > 1;
+                alert( isGreater );
+            </code></pre> <br>
+
+            <!-- NULL -->
+            <h3 class="subtitle">Значение «null»</h3> 
+            <p class="info-text">Специальное значение null не относится ни к одному из типов, описанных выше.</p>
+            <p class="info-text">Оно формирует отдельный тип, который содержит только значение null:</p>
+            <pre class="rainbow"><code data-language="JavaScript">
+                let age = null;
+            </code></pre> <br>
+            <p class="info-text">Это просто специальное значение, которое представляет собой «ничего», «пусто» или «значение неизвестно».</p>
+
+
+
+
             
         </section>
 
