--- a/css.html
+++ b/css.html
@@ -20,7 +20,7 @@
                 <li class="nav-item"><a href="./git.html">git</a></li>
                 <li class="nav-item"><a href="./github.html">github</a></li>
                 <li class="nav-item"><a href="">figma</a></li>
-                <li class="nav-item"><a href="">js</a></li>
+                <li class="nav-item"><a href="./js.html">js</a></li>
                 <li class="nav-item"><a href="./tasks.html">tasks</a></li>
             </ul>
         </nav>
