--- a/tasks.html
+++ b/tasks.html
@@ -8,28 +8,83 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link href="./css/paraiso-light.css" rel="stylesheet" type="text/css">
+
 
 </head>
 <body>
- <header class="header">
-    <nav class="nav">
-        <p class="logo">workingfish</p>
-        <ul class="nav-list">
-            <li class="nav-item"><a href="./html-page.html">html</a></li> 
-            <li class="nav-item"><a href="./css.html">css</a></li>
-            <li class="nav-item"><a href="/scss.html">scss</a></li>
-            <li class="nav-item"><a href="./git.html">git</a></li>
-            <li class="nav-item"><a href="./github.html">github</a></li>
-            <li class="nav-item"><a href="">figma</a></li>
-            <li class="nav-item"><a href="./js.html">js</a></li>
-            <li class="nav-item"><a href="./tasks.html">tasks</a></li>
-        </ul>
-    </nav>
- </header>
-<main class="main">
-<p class="tasks-links"><a href="https://onlinetestpad.com/f32nmlqdero5m" target="_blank">#0 html</a></p>
-<p class="tasks-links"><a href="https://onlinetestpad.com/7o53gbwa353m2" target="_blank">#1 css</a></p>
-<p class="tasks-links"><a href="https://onlinetestpad.com/4xgjc65qyzk3c" target="_blank">#2 git</a></p>
+    <header class="header">
+        <nav class="nav">
+            <p class="logo">workingfish</p>
+            <ul class="nav-list">
+                <li class="nav-item"><a href="./html-page.html">html</a></li> 
+                <li class="nav-item"><a href="./css.html">css</a></li>
+                <li class="nav-item"><a href="/scss.html">scss</a></li>
+                <li class="nav-item"><a href="./git.html">git</a></li>
+                <li class="nav-item"><a href="./github.html">github</a></li>
+                <li class="nav-item"><a href="">figma</a></li>
+                <li class="nav-item"><a href="./js.html">js</a></li>
+                <li class="nav-item"><a href="./tasks.html">tasks</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <p class="tasks-links"><a href="https://onlinetestpad.com/f32nmlqdero5m" target="_blank">#0 html</a></p>
+        <p class="tasks-links"><a href="https://onlinetestpad.com/7o53gbwa353m2" target="_blank">#1 css</a></p>
+        <p class="tasks-links"><a href="https://onlinetestpad.com/4xgjc65qyzk3c" target="_blank">#2 git</a></p>
+    
+        <h2 class="js-tasks">JS #2</h2>
 
-</main>
+        <h3 class="subtitle">2/1</h3>
+        <p class="info-text">Что выведет этот скрипт?</p>
+        <pre class="rainbow"><code data-language="JavaScript">
+            let name = "John";
+            alert( `hello ${1}` ); 
+            alert( `hello ${"name"}` ); 
+            alert( `hello ${name}` );
+        </code></pre> <br>
+
+        <h3 class="subtitle">2/2</h3>
+        <p class="info-text">Выведите на экран друг за другом три имени: <span class="for-tasks">Kanye, Rakim, Aubrey.</span> </p>
+        <p class="info-text">Для каждого имени используйте свой собственный вызов console.log(). </p>
+
+        <h3 class="subtitle">2/3</h3>
+        <p class="info-text">Найдите в программе необъявленную переменную и объявите её, присвоив ей значение Piggy.</p>
+        <pre class="rainbow"><code data-language="JavaScript">
+            let name = 'John';
+            console.log(family);
+            console.log('and');
+            console.log(pet);
+        </code></pre> <br>
+
+        <h3 class="subtitle">2/3</h3>
+        <p class="info-text">Выведите на экран строку  <span class="for-tasks">Do you want to play, &lt;name&gt;?</span>, где вместо <span class="for-tasks">&lt;name&gt;</span> 
+            должна использоваться константа <span class="for-tasks">saw</span>.
+            Вывод должен получиться таким: <span class="for-tasks">Do you want to play, John?</span></p>
+            <pre class="rainbow"><code data-language="JavaScript">
+                const saw = 'John';
+            </code></pre> <br>
+
+            <h3 class="subtitle">2/4</h3>
+            <p class="info-text"> Используя функцию <span class="for-tasks">prompt</span> запросите у пользователя следующую информацию:</p>
+            <p class="info-text">Как тебя зовут?</p>
+            <p class="info-text">Сколько тебе лет?</p>
+            <p class="info-text">Какой твой любимый цвет?</p>
+            <p class="info-text"> Далее с помощью <span class="for-tasks">alert</span> выведите на экран введённую пользователем информацию в следующем виде:</p>
+            <pre class="rainbow"><code data-language="JavaScript">
+                'Тебя зовут &lt;name&gt;'
+                'Тебе &lt;age&gt; лет'
+                'Твой любимый цвет &lt;color&gt;'
+            </code></pre> <br>
+            <p class="info-text">Вместо <span class="for-tasks">&lt;name&gt;, &lt;age&gt;, &lt;color&gt;</span> должна быть отображена введённая пользователем информация.</p>
+
+
+    </main>
+
+
+
+
+    <script src="./rainbow-custom.min.js"></script>
+    <script src="/assets/js/language/generic.js"></script>
+    <script src="/assets/js/language/python.js"></script>
 </body>
