feat: add new info 3

--- a/git.html
+++ b/git.html
@@ -15,12 +15,12 @@
     <nav class="nav">
         <p class="logo">workingfish</p>
         <ul class="nav-list">
-            <li class="nav-item"><a href="./html-page.html">html</a></li> 
-            <li class="nav-item"><a href="./css.html">css</a></li>
-            <li class="nav-item"><a href="./scss.html">scss</a></li>
+            <li class="nav-item"><a href="http://workingfish.tilda.ws/">html</a></li> 
+            <li class="nav-item"><a href="http://workingfish.tilda.ws/page-css">css</a></li>
+            <!-- <li class="nav-item"><a href="/scss.html">scss</a></li> -->
             <li class="nav-item"><a href="./git.html">git</a></li>
-            <li class="nav-item"><a href="./github.html">github</a></li>
-            <li class="nav-item"><a href="">figma</a></li>
+            <!-- <li class="nav-item"><a href="./github.html">github</a></li> -->
+            <!-- <li class="nav-item"><a href="">figma</a></li> -->
             <li class="nav-item"><a href="./js.html">js</a></li>
             <li class="nav-item"><a href="./tasks.html">tasks</a></li>
         </ul>
