--- a/tasks.html
+++ b/tasks.html
@@ -17,12 +17,12 @@
         <nav class="nav">
             <p class="logo">workingfish</p>
             <ul class="nav-list">
-                <li class="nav-item"><a href="./html-page.html">html</a></li> 
-                <li class="nav-item"><a href="./css.html">css</a></li>
-                <li class="nav-item"><a href="/scss.html">scss</a></li>
+                <li class="nav-item"><a href="http://workingfish.tilda.ws/">html</a></li> 
+                <li class="nav-item"><a href="http://workingfish.tilda.ws/page-css">css</a></li>
+                <!-- <li class="nav-item"><a href="/scss.html">scss</a></li> -->
                 <li class="nav-item"><a href="./git.html">git</a></li>
-                <li class="nav-item"><a href="./github.html">github</a></li>
-                <li class="nav-item"><a href="">figma</a></li>
+                <!-- <li class="nav-item"><a href="./github.html">github</a></li> -->
+                <!-- <li class="nav-item"><a href="">figma</a></li> -->
                 <li class="nav-item"><a href="./js.html">js</a></li>
                 <li class="nav-item"><a href="./tasks.html">tasks</a></li>
             </ul>
@@ -60,23 +60,56 @@
         <h3 class="subtitle">2/3</h3>
         <p class="info-text">Выведите на экран строку  <span class="for-tasks">Do you want to play, &lt;name&gt;?</span>, где вместо <span class="for-tasks">&lt;name&gt;</span> 
             должна использоваться константа <span class="for-tasks">saw</span>.
-            Вывод должен получиться таким: <span class="for-tasks">Do you want to play, John?</span></p>
-            <pre class="rainbow"><code data-language="JavaScript">
+            Вывод должен получиться таким: <span class="for-tasks">Do you want to play, John?</span>
+        </p>
+        <pre class="rainbow"><code data-language="JavaScript">
                 const saw = 'John';
-            </code></pre> <br>
+        </code></pre> <br>
 
-            <h3 class="subtitle">2/4</h3>
-            <p class="info-text"> Используя функцию <span class="for-tasks">prompt</span> запросите у пользователя следующую информацию:</p>
-            <p class="info-text">Как тебя зовут?</p>
-            <p class="info-text">Сколько тебе лет?</p>
-            <p class="info-text">Какой твой любимый цвет?</p>
-            <p class="info-text"> Далее с помощью <span class="for-tasks">alert</span> выведите на экран введённую пользователем информацию в следующем виде:</p>
-            <pre class="rainbow"><code data-language="JavaScript">
+        <h3 class="subtitle">2/4</h3>
+        <p class="info-text"> Используя функцию <span class="for-tasks">prompt</span> запросите у пользователя следующую информацию:
+        </p>
+        <p class="info-text">Как тебя зовут?</p>
+        <p class="info-text">Сколько тебе лет?</p>
+        <p class="info-text">Какой твой любимый цвет?</p>
+        <p class="info-text"> Далее с помощью <span class="for-tasks">alert</span> выведите на экран введённую пользователем информацию в следующем виде:</p>
+        <pre class="rainbow"><code data-language="JavaScript">
                 'Тебя зовут &lt;name&gt;'
                 'Тебе &lt;age&gt; лет'
                 'Твой любимый цвет &lt;color&gt;'
-            </code></pre> <br>
-            <p class="info-text">Вместо <span class="for-tasks">&lt;name&gt;, &lt;age&gt;, &lt;color&gt;</span> должна быть отображена введённая пользователем информация.</p>
+        </code></pre> <br>
+        <p class="info-text">Вместо <span class="for-tasks">&lt;name&gt;, &lt;age&gt;, &lt;color&gt;</span> должна быть отображена введённая пользователем информация.</p>
+
+        <h3 class="subtitle">3/1</h3>
+        <p class="info-text">Cоздайте переменную с числовым значением, а затем  преобразуйте его в строку.</p>
+        <h3 class="subtitle">3/2</h3>
+        <p class="info-text">Запросите у пользователя дату его рождения и выведите на экран возраст пользователя в текущем году.</p>
+        <h3 class="subtitle">3/3</h3>
+        <p class="info-text">Напишите скрипт, который будет считать количество секунд в введённом пользователем количестве часов.
+            Выведите резульат на экран.
+        </p>
+        <h3 class="subtitle">3/4</h3>
+        <p class="info-text">Переделайте приведенный код так, чтобы в нем использовались сокращенные операции</p>
+        <pre class="rainbow"><code data-language="JavaScript">
+            let num = 1;
+            num = num + 12;
+            num = num - 14;
+            num = num * 5;
+            num = num / 7;
+            num = num + 1;
+            num = num - 1;
+        </code></pre> <br>
+
+        <h3 class="subtitle">3/5</h3>
+        <p class="info-text">Создайте переменные a=17 и b=10. Отнимите от a переменную b и результат присвойте переменной c. Затем создайте переменную d, присвойте ей значение 7. Сложите переменные c и d, а результат запишите в переменную result. Выведите на экран значение переменной result.</p>
+       
+        <h3 class="subtitle">3/6</h3>
+        <p class="info-text">Напишите скрипт, который считает количество секунд в часе, в сутках, в месяце</p>
+
+        <h3 class="subtitle">3/7</h3>
+        <p class="info-text">Создайте три переменные - час, минута, секунда. С их помощью выведите текущее время в формате 'час:минута:секунда'.</p>
+
+
 
 
     </main>
