feat: add new info #4

--- a/tasks.html
+++ b/tasks.html
@@ -110,6 +110,43 @@
         <p class="info-text">Создайте три переменные - час, минута, секунда. С их помощью выведите текущее время в формате 'час:минута:секунда'.</p>
 
 
+        <h3 class="subtitle">1/4</h3>
+        <p class="info-text">Используя конструкцию if..else, напишите код, который получает число через prompt, 
+            а затем выводит в alert 
+            (Предполагается, что пользователь вводит только числа.):
+        </p>
+        <pre class="rainbow"><code data-language="JavaScript">
+            1, если значение больше нуля,
+            -1, если значение меньше нуля,
+            0, если значение равно нулю.
+        </code></pre> <br>
+
+        <h3 class="subtitle">2/4</h3>
+        <p class="info-text">Требуется спросить у пользователя: ФИО (раздельно), возраст в годах, 
+            пол (с помощью confirm, например "Ваш пол -- мужской?". И вывести используя alert анкету 
+            пользователя по примеру:
+        </p>
+        <pre class="rainbow"><code data-language="JavaScript">
+            Ваше ФИО: Ракимов Раким Ракимович;
+            Ваш возраст в годах: 20;
+            Ваш возраст в днях: 7300;
+            Через 5 лет Вам будет: 25;
+            Ваш пол: мужской;
+            Вы на пенсии: нет.
+        </code></pre> <br>
+        <h3 class="subtitle">3/4</h3>
+        <p class="info-text">Перепишите конструкцию if с использованием условного оператора '?':</p>
+        <pre class="rainbow"><code data-language="JavaScript">
+            let result;
+
+            if (a + b < 4) {
+            result = 'Мало';
+            } else {
+            result = 'Много';
+            }
+        </code></pre> <br>
+
+
 
 
     </main>
