--- a/js.html
+++ b/js.html
@@ -341,9 +341,8 @@
             </code></pre> <br>
             <p class="info-text">Постфиксная форма <span class="for-tasks">counter++</span>  также увеличивает counter, но возвращает старое значение (которое было до увеличения). </p>
 
-
-
-            <!-- <h3 class="subtitle">Оператор «запятая»</h3>  -->
+            <h2 class="title"><a href="https://learn.javascript.ru/comparison" target="_blank">Операторы сравнения</a></h2>
+            <h3 class="subtitle"><a href="https://sore-valley-72f.notion.site/JS-for-babies-0308f800df454a5ebb7b11daec9bc13d" target="_blank">Конспект #4</a></h3>
 
             
         </section>
