--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
  <header class="header">
     <nav class="nav">
         <p class="logo">workingfish</p>
+        <img class="gif" src="./img/WXfH.gif" alt="">
         <ul class="nav-list">
+            <li class="nav-item"><a href="https://docs.google.com/forms/d/e/1FAIpQLSea5D1-fFl5oIH2ea19UwezvnhdCMmwYqWmR9k_0pTmqiX7mA/viewform">опрос</a></li> 
             <li class="nav-item"><a href="http://workingfish.tilda.ws/">html</a></li> 
             <li class="nav-item"><a href="http://workingfish.tilda.ws/page-css">css</a></li>
+            <li class="nav-item"><a href="http://workingfish.tilda.ws/practice">practice</a></li>                 
             <!-- <li class="nav-item"><a href="/scss.html">scss</a></li> -->
             <li class="nav-item"><a href="./git.html">git</a></li>
             <!-- <li class="nav-item"><a href="./github.html">github</a></li> -->
