--- a/js.html
+++ b/js.html
@@ -15,9 +15,12 @@
     <header class="header">
         <nav class="nav">
             <p class="logo">workingfish</p>
-            <ul class="nav-list" id="menu-start">
+            <img class="gif" src="./img/WXfH.gif" alt="">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="https://docs.google.com/forms/d/e/1FAIpQLSea5D1-fFl5oIH2ea19UwezvnhdCMmwYqWmR9k_0pTmqiX7mA/viewform">опрос</a></li> 
                 <li class="nav-item"><a href="http://workingfish.tilda.ws/">html</a></li> 
                 <li class="nav-item"><a href="http://workingfish.tilda.ws/page-css">css</a></li>
+                <li class="nav-item"><a href="http://workingfish.tilda.ws/practice">practice</a></li>                 
                 <!-- <li class="nav-item"><a href="/scss.html">scss</a></li> -->
                 <li class="nav-item"><a href="./git.html">git</a></li>
                 <!-- <li class="nav-item"><a href="./github.html">github</a></li> -->
@@ -341,7 +344,8 @@
             </code></pre> <br>
             <p class="info-text">Постфиксная форма <span class="for-tasks">counter++</span>  также увеличивает counter, но возвращает старое значение (которое было до увеличения). </p>
 
-            <h2 class="title"><a href="https://learn.javascript.ru/comparison" target="_blank">Операторы сравнения</a></h2>
+            <h2 class="title"><a href="https://learn.javascript.ru/comparison" target="_blank">Операторы сравнения.</a></h2>
+            <h2 class="title"><a href="https://learn.javascript.ru/ifelse" target="_blank">Условное ветвление: if, '?’</a></h2>
             <h3 class="subtitle"><a href="https://sore-valley-72f.notion.site/JS-for-babies-0308f800df454a5ebb7b11daec9bc13d" target="_blank">Конспект #4</a></h3>
 
             
@@ -352,4 +356,5 @@
         <script src="./rainbow-custom.min.js"></script>
         <script src="/assets/js/language/generic.js"></script>
         <script src="/assets/js/language/python.js"></script>
+        <script src="./test.js"></script>
 </body>
