--- a/js.html
+++ b/js.html
@@ -43,7 +43,10 @@
         <section class="scss-info">
             <!-- <p class="info-text">git &mdash; c этого слова начинаются все команды</p> -->
             <!-- <p class="info-text">репозиторий git &mdash; каталог файловой системы, в котором находятся файлы конфигурации репозитория, файлы журналов, хранящие операции, выполняемые над репозиторием, индекс, описывающий расположение файлов, и хранилище, содержащее собственно файлы</p> -->
-
+            <div class="mmain">
+                <p><a href="https://learn.javascript.ru/comparison" target="_blank">Учебник learnjavascript</a></p>
+                <p><a href="https://sore-valley-72f.notion.site/JS-for-babies-0308f800df454a5ebb7b11daec9bc13d" target="_blank">Конспекты</a></p>
+            </div>
             <h2 class="title">Как подключить JS</h2>
             <h3 class="subtitle">Внешний файл</h3>
             <pre class="rainbow"><code data-language="JavaScript">
@@ -342,13 +345,7 @@
                 let a = counter++; // (*) меняем ++counter на counter++
                 alert(a); // 1
             </code></pre> <br>
-            <p class="info-text">Постфиксная форма <span class="for-tasks">counter++</span>  также увеличивает counter, но возвращает старое значение (которое было до увеличения). </p>
-
-            <h2 class="title"><a href="https://learn.javascript.ru/comparison" target="_blank">Операторы сравнения.</a></h2>
-            <h2 class="title"><a href="https://learn.javascript.ru/ifelse" target="_blank">Условное ветвление: if, '?’</a></h2>
-            <h3 class="subtitle"><a href="https://sore-valley-72f.notion.site/JS-for-babies-0308f800df454a5ebb7b11daec9bc13d" target="_blank">Конспект #4</a></h3>
-
-            
+            <p class="info-text">Постфиксная форма <span class="for-tasks">counter++</span>  также увеличивает counter, но возвращает старое значение (которое было до увеличения). </p>           
         </section>
 
     </main>
