--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
     </section>
 </main>
+        <script src="./test.js"></script>
 
 </body>
 </html>
