feat: add 6.16 task

--- a/tasks.html
+++ b/tasks.html
@@ -349,6 +349,10 @@
             <p class="info-text"><a href="https://www.codewars.com/kata/53369039d7ab3ac506000467/train/javascript"
                     target="_blank">Codewars. Convert boolean values to strings 'Yes' or 'No'.</a></p>
 
+            <h3 class="subtitle">6.16</h3>
+            <p class="info-text"><a href="https://www.codewars.com/kata/5ce9c1000bab0b001134f5af"
+                    target="_blank">Quarter of the year</a></p>
+
         </div>
 
         <div onclick="js7_fun()" class="reset-btn">#7</div>
@@ -364,10 +368,11 @@
             </code></pre> <br>
 
             <h3 class="subtitle">7.2</h3>
-            <p class="info-text">Напишите функцию <span class="for-tasks">isEmpty(obj)</span>, которая возвращает <span class="for-tasks">true</span>, если у объекта нет свойств,
+            <p class="info-text">Напишите функцию <span class="for-tasks">isEmpty(obj)</span>, которая возвращает <span
+                    class="for-tasks">true</span>, если у объекта нет свойств,
                 иначе<span class="for-tasks">false</span> </p>
             <p class="info-text">Должно работать так:</p>
-             <pre class="rainbow"><code data-language="JavaScript">
+            <pre class="rainbow"><code data-language="JavaScript">
                 let schedule = {};
                 alert( isEmpty(schedule) ); // true
                 schedule["8:30"] = "get up";
