feat: edit tasks.html

--- a/tasks.html
+++ b/tasks.html
@@ -368,6 +368,24 @@
             </code></pre> <br>
 
             <h3 class="subtitle">7.2</h3>
+            <p class="info-text">
+                Запросите у пользователя:
+                <ul style="list-style: circle;">
+                    <li>Имя</li>
+                    <li>Возраст</li>
+                    <li>Знак зодиака</li>
+                    <li>Любимое место</li>
+                    <li>Любимый фильм/книга</li>
+                    <li>"Идеальная профессия это" ... почему?</li>
+                    <li>"Я никогда не ..."</li>
+                    <li> Каким животным хотел бы стать</li>
+                    <li>Что ценит в людях</li>
+                    <li>Последнее приятное событие</li>
+                </ul> 
+            </p>
+            <p class="info-text">Полученную информацию сохраните в объекте</p>
+
+            <h3 class="subtitle">7.3</h3>
             <p class="info-text">Напишите функцию <span class="for-tasks">isEmpty(obj)</span>, которая возвращает <span
                     class="for-tasks">true</span>, если у объекта нет свойств,
                 иначе<span class="for-tasks">false</span> </p>
@@ -393,7 +411,7 @@
                 Должно получиться <span class="for-tasks">390</span>.
             </p>
 
-            <h3 class="subtitle">7.4</h3>
+            <!-- <h3 class="subtitle">7.4</h3>
             <p class="info-text">Создайте функцию <span class="for-tasks">multiplyNumeric(obj)</span>, которая умножает
                 все числовые свойства объекта
                 <span class="for-tasks">obj</span> на <span class="for-tasks">2</span>:
@@ -420,7 +438,7 @@
             </p>
             <p class="info-text">P.S. Используйте <span class="for-tasks">typeof</span>для проверки, что значение
                 свойства числовое.
-            </p>
+            </p> -->
 
         </div>
 
